# invoice-env

./: .env.example  Dockerfile  LICENSE  README.md  app.py  client.py  evaluator.py  gen_tasks.py  inference.py  judge_simulation.py  models.py  nginx.conf  openenv.yaml  out.txt  output_clean.txt  payload.json  phase2_log.txt  push_final_log.txt  push_help.txt  pyproject.toml  requirements.txt  run_agent.py  scen.txt  streamlit_app.py  supervisord.conf  tmp_run_output.txt  validate_readme.py
agent/: __init__.py  agent.py
dashboard/: gradio_app.py
frontend/: index.html
scripts/: smoke_test.py  validate-submission.sh
server/: __init__.py  app.py  data_generator.py  env.py  environment.py  grader.py  main.py  models.py  tasks.py
server/audit/: logger.py
server/integrations/: erp_mock.py  ocr.py
server/production/: hitl.py
tests/: test_baselines.py  test_comprehensive.py  test_env.py  test_shield.py
