[project]
name = "invoice-env"
version = "0.1.0"
description = "Invoice Reconciliation OpenEnv Environment"
authors = [
    { name = "Mathir", email = "mathir@example.com" },
    { name = "Dharshini", email = "dharshini@example.com" },
    { name = "Harish", email = "harish@example.com" },
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "together>=1.3.0",
    "groq>=0.9.0",
    "openai>=1.30.0",
    "faker>=33.1.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
