[project]
name = "invoice-env"
version = "0.1.0"
description = "OpenEnv submission for multi-stage invoice reconciliation"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
